--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,9 @@
 body {
-  overflow: hidden;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Noto Sans CJK SC,WenQuanYi Micro Hei,Arial,sans-serif;
-  padding: 0 !important;
+  color: #333333;
 }
 
 b, strong, label {
