--- a/src/assets/fonts/iconfont.css
+++ b/src/assets/fonts/iconfont.css
@@ -15,6 +15,16 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+[class^="icon"],
+[class*=" icon"]/*这里有空格*/
+ {
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .iconren:before {
   content: "\e648";
 }
